--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-perf-ktx'
+    implementation libs.firebase.firestore.ktx
     /*implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.25.0'
     implementation 'com.google.api-client:google-api-client-android:1.35.0'
