--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ android {
         buildConfig = true
     }
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
+
 }
 
 dependencies {
@@ -63,6 +67,7 @@ dependencies {
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
     // Gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -83,10 +88,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-perf-ktx'
     implementation libs.firebase.firestore.ktx
-    /*implementation 'com.google.android.gms:play-services-auth:20.3.0'
-    implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.25.0'
-    implementation 'com.google.api-client:google-api-client-android:1.35.0'
-    implementation 'com.google.http-client:google-http-client-gson:1.41.0'*/
+
+    // Google Calendar
+    implementation 'com.google.android.gms:play-services-auth:21.3.0'
 }
 
 kapt {
