Clase API para los EndPoint de GoogleCalendar. Reestructuración de clases y variables. Renaming Example3 por Calendar. Limpieza de código

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         targetSdk 35
         versionCode project.versionCode
         versionName project.versionName
+        buildConfigField "String", "GOOGLE_ACCESS_TOKEN", "\"217437853819-ohqt67v4ioejvkjvkha2dlmj6gh1sr36.apps.googleusercontent.com\""
     }
 
     buildTypes {
