--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,12 +65,11 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.0.1"
     implementation "androidx.webkit:webkit:1.12.1"
     implementation "androidx.work:work-runtime-ktx:2.9.0"
+    implementation "androidx.datastore:datastore-preferences:1.1.7"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.11.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.11.0'
-
-    // Gson
     implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
 
     // Coroutines
