--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     // Google Calendar
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
+    // Calendar View
     implementation 'com.kizitonwose.calendar:view:2.7.0'
 }
 
