--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-perf-ktx'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.11.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
     // Google Calendar
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
