--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,10 @@ android {
     }
 
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
+        excludes += [
+                'META-INF/DEPENDENCIES',
+                "META-INF/NOTICE.md",
+        ]
     }
 
 }
@@ -95,6 +98,10 @@ dependencies {
 
     // Calendar View
     implementation 'com.kizitonwose.calendar:view:2.7.0'
+
+    // iText PDF
+    implementation "com.itextpdf:itext7-core:9.5.0"
+    implementation "com.github.gcacace:signature-pad:1.3.1"
 }
 
 kapt {
